# CSocket

./: .gitignore  CMakeLists.txt  LICENSE.txt
.github/workflows/: testLinuxSocket.yml
docs/: README.md
src/: CMakeLists.txt  CSocket.h  SocketDefinitionTypes.h
src/ClientSockets/: CMakeLists.txt  ClientSocket.h  IClientSocket.h
src/ClientSockets/LinuxImp/: LinuxClientSocket.cpp  LinuxClientSocket.h
src/ClientSockets/WinsockImp/: WindowsClientSocket.cpp  WindowsClientSocket.h
src/ServerSocket/: CMakeLists.txt  IServerSocket.h  ServerSocket.h
src/ServerSocket/LinuxImp/: LinuxServerSocket.cpp  LinuxServerSocket.h
src/ServerSocket/WindowsImp/: WindowsServerSocket.cpp  WindowsServerSocket.h
tests/: CMakeLists.txt
tests/LinuxTests/: CMakeLists.txt
tests/LinuxTests/findIp/: CMakeLists.txt  FindLocalIp.cpp  FindLocalIp.h
tests/LinuxTests/testOfLinuxClient/: CMakeLists.txt  TestOfLinuxClientSocket.cpp
tests/LinuxTests/testOfLinuxServer/: CMakeLists.txt  TestOfLinuxServerSocket.cpp
tests/WindowsTests/: CMakeLists.txt
tests/WindowsTests/testOfWindowsClient/: CMakeLists.txt  TestsOfWindowsClientSocket.cpp
tests/WindowsTests/testOfWindowsServer/: CMakeLists.txt  TestOfWindowsServerSocket.cpp
tests/testOfWindowsClient/: CMakeLists.txt  TestsOfWindowsClientSocket.cpp
tests/testOfWindowsServer/: CMakeLists.txt  TestOfWindowsServerSocket.cpp
